<resources>
    <string name="app_name">AjoLoki</string>


    <string name="log_fragment_title">LOKI</string>
    <string name="list_fragment_title">LISTA</string>
    <string name="action_settings">Settings</string>
    <string name="odometer_start">Matkamittari lähtiessä</string>
    <string name="odometer_stop">Matkamittari perillä</string>
    <string name="type">Tyyppi</string>
    <string name="length">Matka</string>
    <string name="personal">Oma</string>
    <string name="work">Työ</string>
    <string name="log_type">Matkan tyyppi</string>
    <string name="date">Päivämäärä</string>
    <string name="time">Kellonaika</string>
    <string name="description">Kuvaus</string>
    <string name="btnSave">Talenna</string>
    <string name="btnDiscard">Hylkää</string>
    <string name="errEmptyFields">Täytä kaikki kentät</string>
    <string name="saveSuccess">Tiedot tallenettu</string>
    <string name="odometerStartLargerThanStop">Tarkasta mittarilukemat!</string>
    <string name="delete">Poista</string>
    <string name="deleteDialogTitle">Poista ajo</string>
    <string name="deleteDialogConfirm">Haluatko varmasti poistaa?</string>
    <string name="cancel">Peruuta</string>
    <string name="exportTitle">Vie lokit</string>
    <string name="exportSuccess">Vienti onnistui!</string>
    <string name="exportFail">Vienti epäonnistui!</string>



</resources>
