<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/listItemBottomMargin"
    >
    <TextView
        android:id="@+id/listJourneyType"
        android:layout_width="@dimen/journeyTypeWidth"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="@dimen/textSize"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        >
        <TextView
            android:id="@+id/listJourneyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/textSize"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/listJourneyDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/textSizeSmall"
            android:layout_below="@+id/listJourneyDescription"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/listJourneyLength"
        android:layout_width="@dimen/journeyLengthWidth"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textSize="@dimen/textSize"
        />

</LinearLayout>