<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.antonlehmus.drivelog.LogFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/odometerStartLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/odometerStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/odometer_start"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/odometerStopLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/odometerStartLayout"
        android:layout_alignStart="@id/odometerStartLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/odometerStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/odometer_stop"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>



    <TextView
        android:id="@+id/typeLayoutLabel"
        android:layout_alignStart="@id/odometerStopLayout"
        android:layout_alignEnd="@id/odometerStopLayout"
        android:layout_below="@id/odometerStopLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/log_type"
        android:ems="10"
        android:textSize="@dimen/labelTextSize"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>


    <RadioGroup
        android:layout_below="@id/typeLayoutLabel"
        android:layout_alignStart="@id/typeLayoutLabel"
        android:id="@+id/typeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >

        <RadioButton android:id="@+id/radio_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:onClick="onRadioButtonClicked"
            android:padding="@dimen/radio_padding"
            android:layout_margin="@dimen/radio_margin"
            android:textSize="@dimen/labelTextSize"
            android:checked="true"/>

        <RadioButton android:id="@+id/radio_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:onClick="onRadioButtonClicked"
            android:padding="@dimen/radio_padding"
            android:layout_margin="@dimen/radio_margin"
            android:textSize="@dimen/labelTextSize"/>
        </RadioGroup>

    <TextView
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        android:minHeight="48dp"
        android:textIsSelectable="false"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeRadioGroup"
        android:layout_alignStart="@id/typeRadioGroup"
        android:layout_alignEnd="@id/typeRadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/date"
        android:textSize="@dimen/labelTextSize"
        android:onClick="showDatePickerDialog"
        android:paddingTop="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        style="@android:style/Widget.EditText"
        />


    <TextView
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:minHeight="48dp"
        android:textIsSelectable="false"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:layout_alignStart="@id/datePicker"
        android:layout_alignEnd="@id/datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/time"
        android:textSize="@dimen/labelTextSize"
        android:onClick="showTimePickerDialog"
        android:paddingTop="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        style="@android:style/Widget.EditText"
        />



</RelativeLayout>
